--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -11,11 +11,11 @@ services:
             - "3306:3306"
         volumes: 
             - "./.data/db:/var/lib/mysql"
-#    adminer:
-#        image: adminer
-#        restart: on-failure
-#        ports:
-#            - '8080:8080'
+    adminer:
+        image: adminer
+        restart: on-failure
+        ports:
+            - '8085:8080'
  
     nginx:
         image: nginx:1.15.3-alpine
